<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
	>

<!-- === Service header begin ===============-->
<include layout="@layout/service_header"/>    
<!-- === Service header end =================-->

<TableRow>    
   <TextView 
        android:id="@+id/textView1"
        android:text="@string/listeningPorts" 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"         
        />
</TableRow>
<TableRow>    
   <TextView 
        android:id="@+id/textView4"
        android:text="@string/udp" 
        />
   <TextView
        android:id="@+id/udpdata"
        />
</TableRow>
<TableRow>    
   <TextView 
        android:id="@+id/textView5"
        android:text="@string/messageCount" 
        />
   <TextView
        android:id="@+id/msgCount"
        />
</TableRow>
<TableRow>    
   <TextView 
        android:id="@+id/t5"
        android:text="@string/connections" 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"         
        />
</TableRow>

<TableRow
    android:id="@+id/tableRow1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_addresses" />
   <TextView
        android:id="@+id/local_addresses"
        />
</TableRow>

</TableLayout>