<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<TableRow>      
<!-- === Service header begin ===============-->
<include layout="@layout/service_header"/>    
<!-- === Service header end =================-->
</TableRow>        
<TableRow>    
   <TextView 
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vmName" />
   <TextView 
        android:id="@+id/vmName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
</TableRow>
<TableRow>    
   <TextView 
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/os" />
   <TextView 
        android:id="@+id/os"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
</TableRow>
<TableRow>    
   <TextView 
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arch" />
   <TextView 
        android:id="@+id/arch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
</TableRow>
<TableRow>    
   <TextView 
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bitness" />
   <TextView 
        android:id="@+id/bitness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
</TableRow>

</TableLayout>