<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<TableRow >
    <!--   Button - autoStart's Phone UI
        android:id="@+id/startService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startService" / -->
        
<!-- === Service header begin ===============-->
<include layout="@layout/service_header"/>    
<!-- === Service header end =================-->
        
</TableRow>

<TableRow >
    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh" />
    
    <Button
        android:id="@+id/remoteLogging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remoteLogging" />
</TableRow>
<TableRow >    
    <Spinner
        android:id="@+id/new_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<Button
        android:id="@+id/addService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />
    
</TableRow>
    
    
</TableLayout>